--- a/acloud-simple-service/Dockerfile
+++ b/acloud-simple-service/Dockerfile
@@ -4,8 +4,8 @@ MAINTAINER masen <masen.miao@gmail.com>
 RUN mkdir /app
 WORKDIR /app
 
-COPY acloud-book-service.jar /app
+COPY acloud-simple-service.jar /app
 #VOLUME /app
 EXPOSE 8601
 
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app/acloud-book-service.jar" ]
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app/acloud-simple-service.jar" ]
