--- a/acloud-simple-ui/Dockerfile
+++ b/acloud-simple-ui/Dockerfile
@@ -5,8 +5,8 @@ FROM java:8-jre-alpine
 #RUN mkdir /app
 WORKDIR /app
 
-COPY acloud-book-ui.jar /app
+COPY acloud-simple-ui.jar /app
 
 VOLUME /tmp
 EXPOSE 8701
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app/acloud-book-ui.jar" ]
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app/acloud-simple-ui.jar" ]
