--- a/istio-rules/acloud-simple-service-vs-v1.yaml
+++ b/istio-rules/acloud-simple-service-vs-v1.yaml
@@ -1,16 +1,17 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: guestbook-ui
+  name: acloud-simple-service
 spec:
   hosts:
   - "*"
   gateways:
-  - guestbook-gateway
+  - acloud-simple-gateway
   http:
   - match:
     - uri:
         prefix: /
     route:
     - destination:
-        host: guestbook-ui
+        host: acloud-simple-service
+        subset: v1
