--- a/acloud-simple-ui/src/main/resources/application.yml
+++ b/acloud-simple-ui/src/main/resources/application.yml
@@ -6,4 +6,4 @@ spring:
   application:
     name: acloud-simple-ui
 
-simpleServiceName: cloud-simple-service
+simpleServiceName: acloud-simple-service
