--- a/acloud-simple-service/src/main/resources/application.yml
+++ b/acloud-simple-service/src/main/resources/application.yml
@@ -40,7 +40,7 @@ spring:
         enabled: false
     #其中一个数据源，可以配置多个，对应多个config配置类
       base:
-        url: jdbc:mysql://127.0.0.1:3306/summerdb?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
+        url: jdbc:mysql://mysql:3306/summerdb?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
         username: summer
         password: 123456
 
