--- a/istio-rules/acloud-simple-ui-vs.yaml
+++ b/istio-rules/acloud-simple-ui-vs.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: acloud-simple-service
+  name: acloud-simple-ui
 spec:
   hosts:
   - "*"
