--- a/knative/simplesrv-service.yml
+++ b/knative/simplesrv-service.yml
@@ -10,12 +10,11 @@ spec:
           container:
             image: registry.cn-shenzhen.aliyuncs.com/acloud/acloud-simple-service:1.0
             env:
-            - name: spring.datasource.druid.base.username
-              value: root
-            - name: spring.datasource.druid.base.password
-              value: yourpassword
-            - name: userServiceVersion
-              value: "2.0"
+              - name: spring.datasource.druid.base.username
+                value: root
+              - name: spring.datasource.druid.base.password
+                value: yourpassword
+              - name: userServiceVersion
+                value: "2.0"
             ports:
-            - name: http
-              containerPort: 8601
+              - containerPort: 8601
