--- a/knative/ui-service.yml
+++ b/knative/ui-service.yml
@@ -10,8 +10,7 @@ spec:
           container:
             image: registry.cn-shenzhen.aliyuncs.com/acloud/acloud-simple-ui:1.0
             ports:
-            - name: http
-              containerPort: 8701
+              - containerPort: 8701
             env:
-            - name: simpleServiceName
-              value: acloud-simple-service:8601
+              - name: simpleServiceName
+                value: acloud-simple-service:8601
